--- a/2024/package.json
+++ b/2024/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sanity/image-url": "^1.0.2",
+    "@sanity/ui": "^2.4.0",
     "@sanity/vision": "^3.46.1",
     "next": "14.2.4",
     "next-sanity": "^9.3.10",
