--- a/2024/package.json
+++ b/2024/package.json
@@ -12,10 +12,14 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/ui": "^2.4.0",
     "@sanity/vision": "^3.46.1",
+    "animate-css-grid": "^1.5.1",
     "next": "14.2.4",
     "next-sanity": "^9.3.10",
     "react": "^18",
     "react-dom": "^18",
+    "react-flip-toolkit": "^7.1.0",
+    "react-icons": "^5.2.1",
+    "react-svg": "^16.1.34",
     "sanity": "^3.46.1",
     "styled-components": "^6.1.11"
   },
@@ -23,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
