--- a/2024/package.json
+++ b/2024/package.json
@@ -15,6 +15,7 @@
     "animate-css-grid": "^1.5.1",
     "next": "14.2.4",
     "next-sanity": "^9.3.10",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-flip-toolkit": "^7.1.0",
