--- a/2024/package.json
+++ b/2024/package.json
@@ -13,6 +13,7 @@
     "@sanity/ui": "^2.4.0",
     "@sanity/vision": "^3.46.1",
     "animate-css-grid": "^1.5.1",
+    "framer-motion": "^11.2.12",
     "next": "14.2.4",
     "next-sanity": "^9.3.10",
     "next-themes": "^0.3.0",
